# WebViewer3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  canvas.html  canvas.js  graph.html  graph_vis.js  server.js
cmake/: 3DWebViewerConfig.cmake.in  WebViewer3DConfig.cmake.in
include/: context.hpp
scripts/: adaptive_sampling_eval.py  compare_pointcloud.py
test/: CMakeLists.txt  test.cpp
